--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-PyMuPDF
-pytesseract
-pdf2image
-nltk
-pandas
-wordfreq
-eng-to-ipa
-gTTS
-Pillow
-pyttsx3
-playsound
 PyQt6
+pandas
+pdf2image
+pytesseract
+nltk
+gTTS
+pygame
